--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             <span class="d-inline-block">
               <i class="fa fa-file-o"></i>
             </span>
-            <span class="d-inline-block"><a href="../documents/sout.pdf" target="_blank">Результаты специальной оценки условий труда</a></span>
+            <span class="d-inline-block"><a href="documents/sout.pdf" target="_blank">Результаты специальной оценки условий труда</a></span>
           </h4>
         </div>
       </div>
@@ -218,7 +218,7 @@
             <span class="d-inline-block">
               <i class="fa fa-file-o"></i>
             </span>
-            <span class="d-inline-block"><a href="../documents/zayavlenie.pdf" target="_blank">Заявление о политике в области промышленной безопасности ЮНХТ от 14.08.2017г.</a></span>
+            <span class="d-inline-block"><a href="documents/zayavlenie.pdf" target="_blank">Заявление о политике в области промышленной безопасности ЮНХТ от 14.08.2017г.</a></span>
           </h4>
         </div>
       </div>
@@ -242,7 +242,7 @@
     	<div class="container">
     	<div class="row">
         <div class="col-md-1"></div>
-        	<div class="col-md-9 col-sm-12">Copyright &copy; 2018 &nbsp; &nbsp; <span style="color: #b69f41">ООО "Югнефтеимтранзит"</span></div>
+        	<div class="col-md-9 col-sm-12">Copyright &copy; 2018 &nbsp; &nbsp; <span style="color: #b69f41">ООО "Югнефтехимтранзит"</span></div>
             <div class="col-md-2 col-sm-12 templatemo_rfooter">
               <a href="tel:+78614860783">
                  	<div class="hex_footer">
