--- a/index.html
+++ b/index.html
@@ -36,10 +36,7 @@
 		<div class="main-navigation">
 			<div class="responsive_menu">
 				<ul>
-					<li><a class="show-1 templatemo_home" href="#">Gallery</a></li>
-					<li><a class="show-2 templatemo_page2" href="#">Our team</a></li>
-					<li><a class="show-3 templatemo_page3" href="#">Services</a></li>
-					<li><a class="show-5 templatemo_page5" href="#">Contact</a></li>
+					<li><a class="show-1 templatemo_home" href="#">Главная</a></li>
 				</ul>
 			</div>
 			<div class="container">
